test/files/neg/macro-cyclic.check
Impls_Macros_1.scala:6: error: implicit error;
!I e: SourceLocation
    c.universe.reify { implicitly[SourceLocation] }
                                 ^
1 error
